# latinitas-cards

./: .gitignore  README.md  pyproject.toml
src/latinitas_cards/: cli.py
tests/unit/: cli_test.py
